--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-APP_PASSWORD=changeme
-ADMIN_PASSWORD=change-this-admin-password
+APP_PASSWORD=Harbinger123
+ADMIN_PASSWORD=Mda97832
 SESSION_SECRET=replace-with-a-long-random-string
 SHEET_CSV_URL=
